[gd_scene load_steps=7 format=3 uid="uid://dvhjb2ufv8127"]

[ext_resource type="PackedScene" uid="uid://ckajujqwr0kjp" path="res://scenes/wall.tscn" id="1_3t3tv"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_53hav"]
[ext_resource type="PackedScene" uid="uid://bg55b64twl6kn" path="res://scenes/player.tscn" id="2_ovjlp"]
[ext_resource type="PackedScene" uid="uid://cn76xe0o4kol1" path="res://scenes/score_zone.tscn" id="4_rleb1"]

[sub_resource type="SystemFont" id="SystemFont_gwr7m"]
font_names = PackedStringArray("Arial", "Open Sans")

[sub_resource type="LabelSettings" id="LabelSettings_2ymq3"]
font = SubResource("SystemFont_gwr7m")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Main" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_53hav")

[node name="TopWall" parent="." instance=ExtResource("1_3t3tv")]
position = Vector2(0, 16)

[node name="BottomWall" parent="." instance=ExtResource("1_3t3tv")]
position = Vector2(0, 704)

[node name="Player1" parent="." instance=ExtResource("2_ovjlp")]
position = Vector2(72, 352)

[node name="Player2" parent="." instance=ExtResource("2_ovjlp")]
position = Vector2(1208, 352)
rotation = 3.14159

[node name="LeftScoreZone" parent="." instance=ExtResource("4_rleb1")]
position = Vector2(-8, 0)

[node name="RightScoreZone" parent="." instance=ExtResource("4_rleb1")]
position = Vector2(1288, 720)
rotation = 3.14159

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Player1Score" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_2ymq3")
vertical_alignment = 1

[node name="Placeholder" type="Control" parent="CanvasLayer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Player2Score" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_2ymq3")
vertical_alignment = 1
